# semora-sidev

./: .env.example  .firebaserc  .pre-commit-config.yaml  CONTEXT.md  README.md  SEMORA_MASTER_PLAN.md  firebase.json  firestore.rules  pyproject.toml
.agents/skills/stride-scan/: SKILL.md
.firebase/: hosting.ZGFzaGJvYXJkL2Rpc3Q.cache
backend/semora/: __init__.py  cli.py
backend/semora/graph/: __init__.py  aggregator.py  execution_agent.py  pipeline.py  spec_agent.py  state.py  test_pipeline.py  threat_agent.py
backend/semora/mcp/: __init__.py  _server_entrypoint.py  filesystem_server.py  mcp_client_config.py
backend/semora/reporting/: __init__.py  compliance_score.py  markdown_report.py
backend/semora/sandbox/: __init__.py  pytest_bdd_bridge.py  runner.py  worker.py
backend/semora/security/: __init__.py  semgrep_wrapper.py  semora_custom_rules.yaml  stride_rules.py
backend/semora/sync/: __init__.py  firebase_auth.py  firestore_client.py
backend/tests/: test_execution.py  test_firestore_sync.py  test_mcp_filesystem_server.py  test_placeholder.py  test_runner.py  test_spec_agent.py  test_stride_scan.py
backend/tests/fixtures/: __init__.py  vulnerable_sample.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/auth/: EmailLogin.jsx
dashboard/src/components/: AppLayout.jsx  ComplianceBadge.jsx  LiveFeed.jsx  ProtectedRoute.jsx  ThreatMatrix.jsx
docs/: architecture.md  demo_script.md  video_outline.md
hooks/: pre-commit
sample_target_repo/: auth.py  main copy.py  main.py
(+8 files in other folders)
