[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semora"
version = "0.1.0"
description = "Autonomous local CI/quality-gate tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "click>=8.0.0",
    "mcp>=1.0,<2",
    "gitpython>=3.1",
]

[project.scripts]
semora = "semora.cli:main"

[tool.setuptools.packages.find]
where = ["backend"]
